--- a/role-based-login-frontend/package.json
+++ b/role-based-login-frontend/package.json
@@ -3,16 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-oauth/google": "^0.13.4",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.10.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.34.3",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.575.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
+    "tailwind-merge": "^3.5.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
