--- a/rollbasedlogin/pom.xml
+++ b/rollbasedlogin/pom.xml
@@ -102,6 +102,13 @@
 		<version>9.14.0</version>
 	</dependency>
 
+	<!-- Google API Client for validating OAuth ID tokens -->
+	<dependency>
+		<groupId>com.google.api-client</groupId>
+		<artifactId>google-api-client</artifactId>
+		<version>2.2.0</version>
+	</dependency>
+
 	</dependencies>
 
 	<build>
